<resources>
    <string name="app_name">TMDBApp</string>
    <string name="movies_selected_menu_name">movies_selected</string>
    <string name="rating">rating:\u00A0\</string>
    <string name="genre">Genre:\u00A0\</string>
    <string name="no_connection_message">There is no internet connection#8230</string>
    <string name="restart_button">Retry</string>
    <string name="profile_status_default">Signed out</string>
    <string name="account_button">Sign In With Google Account</string>
    <string name="movies_button">Movies</string>
    <string name="sign_out">Sign Out</string>
    <string name="loading">Loading#8230</string>

    <string name="profile_image_content_description">The profile image.</string>
    <string name="selected_movies_image_content_description">Selected movies.</string>
    <string name="user_status">Signed out</string>
    <string name="network_connection_troubles_message">There is no internet connection</string>
    <string name="selected_movies_maximum_number_message">You cannot choose more movies.</string>
    <string name="downloading_message">Downloading</string>
    <string name="downloaded_message">Downloaded</string>
    <string name="not_downloaded_message">Downloading Failed</string>
    <string name="preparing_message">Preparing</string>
    <string name="wait_message">Wait Please…</string>
    <string name="retry_connection_button">Retry</string>

    <string name="detail_poster_image_description">Big poster</string>
    <string name="poster_image_description">Small poster</string>

    <string name="year_and_language">%1$s | %2$s</string>
    <string name="progress_status">%1$s %%</string>

    <string name="something_went_wrong_message">Something went wrong :(</string>
</resources>
